EntregaTarea1/src/DECAFParser.java
// Generated from DECAF.g4 by ANTLR 4.5.3
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DECAFParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CLASS=1, STRUCT=2, TRUE=3, FALSE=4, INT=5, IF=6, ELSE=7, WHILE=8, RETURN=9, 
		CHAR=10, BOOLEAN=11, VOID=12, SCAN=13, PRINT=14, PROGRAM=15, WS=16, CHR=17, 
		ID=18, NUM=19, STRING=20, COMMENT=21, COMA=22, AND=23, OR=24, LBRACE=25, 
		RBRACE=26, DOTCOMMA=27, RCORCH=28, LCORCH=29, LPARENT=30, RPARENT=31, 
		EQ=32, DOT=33, PLUS=34, MINUS=35, EXC=36, AST=37, SLSH=38, PRCNT=39, MTHAN=40, 
		LTHAN=41, EQMTHAN=42, EQLTHAN=43, EQEQ=44, NOTEQ=45;
	public static final int
		RULE_program = 0, RULE_declaration = 1, RULE_varDeclaration = 2, RULE_structDeclaration = 3, 
		RULE_varType = 4, RULE_methodDeclaration = 5, RULE_methodType = 6, RULE_parameter = 7, 
		RULE_parameterType = 8, RULE_block = 9, RULE_statement = 10, RULE_assignation = 11, 
		RULE_whileBlock = 12, RULE_returnBlock = 13, RULE_print = 14, RULE_myIf = 15, 
		RULE_location = 16, RULE_dotLocation = 17, RULE_declaredVariable = 18, 
		RULE_variable = 19, RULE_arrayVariable = 20, RULE_expressionInP = 21, 
		RULE_nExpression = 22, RULE_expression = 23, RULE_andExpression = 24, 
		RULE_equalsExpression = 25, RULE_relationExpression = 26, RULE_addSubsExpression = 27, 
		RULE_mulDivExpression = 28, RULE_prExpression = 29, RULE_basicExpression = 30, 
		RULE_basic = 31, RULE_arg = 32, RULE_methodCall = 33, RULE_arith_op = 34, 
		RULE_md_op = 35, RULE_pr_op = 36, RULE_rel_op = 37, RULE_eq_op = 38, RULE_cond_op = 39, 
		RULE_literal = 40, RULE_int_literal = 41, RULE_char_literal = 42, RULE_bool_literal = 43;
	public static final String[] ruleNames = {
		"program", "declaration", "varDeclaration", "structDeclaration", "varType", 
		"methodDeclaration", "methodType", "parameter", "parameterType", "block", 
		"statement", "assignation", "whileBlock", "returnBlock", "print", "myIf", 
		"location", "dotLocation", "declaredVariable", "variable", "arrayVariable", 
		"expressionInP", "nExpression", "expression", "andExpression", "equalsExpression", 
		"relationExpression", "addSubsExpression", "mulDivExpression", "prExpression", 
		"basicExpression", "basic", "arg", "methodCall", "arith_op", "md_op", 
		"pr_op", "rel_op", "eq_op", "cond_op", "literal", "int_literal", "char_literal", 
		"bool_literal"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'class'", "'struct'", "'true'", "'false'", "'int'", "'if'", "'else'", 
		"'while'", "'return'", "'char'", "'boolean'", "'void'", "'scan'", "'print'", 
		"'Program'", null, null, null, null, null, null, "','", "'&&'", "'||'", 
		"'{'", "'}'", "';'", "']'", "'['", "'('", "')'", "'='", "'.'", "'+'", 
		"'-'", "'!'", "'*'", "'/'", "'%'", "'>'", "'<'", "'>='", "'<='", "'=='", 
		"'!='"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "CLASS", "STRUCT", "TRUE", "FALSE", "INT", "IF", "ELSE", "WHILE", 
		"RETURN", "CHAR", "BOOLEAN", "VOID", "SCAN", "PRINT", "PROGRAM", "WS", 
		"CHR", "ID", "NUM", "STRING", "COMMENT", "COMA", "AND", "OR", "LBRACE", 
		"RBRACE", "DOTCOMMA", "RCORCH", "LCORCH", "LPARENT", "RPARENT", "EQ", 
		"DOT", "PLUS", "MINUS", "EXC", "AST", "SLSH", "PRCNT", "MTHAN", "LTHAN", 
		"EQMTHAN", "EQLTHAN", "EQEQ", "NOTEQ"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DECAF.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DECAFParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	 
		public ProgramContext() { }
		public void copyFrom(ProgramContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ProgramProductionContext extends ProgramContext {
		public TerminalNode CLASS() { return getToken(DECAFParser.CLASS, 0); }
		public TerminalNode PROGRAM() { return getToken(DECAFParser.PROGRAM, 0); }
		public TerminalNode ID() { return getToken(DECAFParser.ID, 0); }
		public TerminalNode LBRACE() { return getToken(DECAFParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(DECAFParser.RBRACE, 0); }
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public ProgramProductionContext(ProgramContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DECAFListener ) ((DECAFListener)listener).enterProgramProduction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DECAFListener ) ((DECAFListener)listener).exitProgramProduction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DECAFVisitor ) return ((DECAFVisitor<? extends T>)visitor).visitProgramProduction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			_localctx = new ProgramProductionContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(CLASS);
			setState(89);
			match(PROGRAM);
			setState(90);
			match(ID);
			setState(91);
			match(LBRACE);
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STRUCT) | (1L << INT) | (1L << CHAR) | (1L << BOOLEAN) | (1L << VOID))) != 0)) {
				{
				{
				setState(92);
				declaration();
				}
				}
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(98);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public StructDeclarationContext structDeclaration() {
			return getRuleContext(StructDeclarationContext.class,0);
		}
		public VarDeclarationContext varDeclaration() {
			return getRuleContext(VarDeclarationContext.class,0);
		}
		public MethodDeclarationContext methodDeclaration() {
			return getRuleContext(MethodDeclarationContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DECAFListener ) ((DECAFListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DECAFListener ) ((DECAFListener)listener).exitDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DECAFVisitor ) return ((DECAFVisitor<? extends T>)visitor).visitDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaration);
		try {
			setState(103);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(100);
				structDeclaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(101);
				varDeclaration();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(102);
				methodDeclaration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclarationContext extends ParserRuleContext {
		public VarDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDeclaration; }
	 
		public VarDeclarationContext() { }
		public void copyFrom(VarDeclarationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ArrayVariableProductionContext extends VarDeclarationContext {
		public VarTypeContext varType() {
			return getRuleContext(VarTypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(DECAFParser.ID, 0); }
		public TerminalNode LCORCH() { return getToken(DECAFParser.LCORCH, 0); }
		public TerminalNode NUM() { return getToken(DECAFParser.NUM, 0); }
		public TerminalNode RCORCH() { return getToken(DECAFParser.RCORCH, 0); }
		public TerminalNode DOTCOMMA() { return getToken(DECAFParser.DOTCOMMA, 0); }
		public ArrayVariableProductionContext(VarDeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DECAFListener ) ((DECAFListener)listener).enterArrayVariableProduction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DECAFListener ) ((DECAFListener)listener).exitArrayVariableProduction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DECAFVisitor ) return ((DECAFVisitor<? extends T>)visitor).visitArrayVariableProduction(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class RegularVariableProductionContext extends VarDeclarationContext {
		public VarTypeContext varType() {
			return getRuleContext(VarTypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(DECAFParser.ID, 0); }
		public TerminalNode DOTCOMMA() { return getToken(DECAFParser.DOTCOMMA, 0); }
		public RegularVariableProductionContext(VarDeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DECAFListener ) ((DECAFListener)listener).enterRegularVariableProduction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DECAFListener ) ((DECAFListener)listener).exitRegularVariableProduction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DECAFVisitor ) return ((DECAFVisitor<? extends T>)visitor).visitRegularVariableProduction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDeclarationContext varDeclaration() throws RecognitionException {
		VarDeclarationContext _localctx = new VarDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_varDeclaration);
		try {
			setState(116);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				_localctx = new RegularVariableProductionContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(105);
				varType();
				setState(106);
				match(ID);
				setState(107);
				match(DOTCOMMA);
				}
				break;
			case 2:
				_localctx = new ArrayVariableProductionContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(109);
				varType();
				setState(110);
				match(ID);
				setState(111);
				match(LCORCH);
				setState(112);
				match(NUM);
				setState(113);
				match(RCORCH);
				setState(114);
				match(DOTCOMMA);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StructDeclarationContext extends ParserRuleContext {
		public TerminalNode STRUCT() { return getToken(DECAFParser.STRUCT, 0); }
		public TerminalNode ID() { return getToken(DECAFParser.ID, 0); }
		public TerminalNode LBRACE() { return getToken(DECAFParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(DECAFParser.RBRACE, 0); }
		public List<VarDeclarationContext> varDeclaration() {
			return getRuleContexts(VarDeclarationContext.class);
		}
		public VarDeclarationContext varDeclaration(int i) {
			return getRuleContext(VarDeclarationContext.class,i);
		}
		public StructDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_structDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DECAFListener ) ((DECAFListener)listener).enterStructDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DECAFListener ) ((DECAFListener)listener).exitStructDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DECAFVisitor ) return ((DECAFVisitor<? extends T>)visitor).visitStructDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StructDeclarationContext structDeclaration() throws RecognitionException {
		StructDeclarationContext _localctx = new StructDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_structDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(STRUCT);
			setState(119);
			match(ID);
			setState(120);
			match(LBRACE);
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STRUCT) | (1L << INT) | (1L << CHAR) | (1L << BOOLEAN) | (1L << VOID))) != 0)) {
				{
				{
				setState(121);
				varDeclaration();
				}
				}
				setState(126);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(127);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarTypeContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(DECAFParser.INT, 0); }
		public TerminalNode CHAR() { return getToken(DECAFParser.CHAR, 0); }
		public TerminalNode BOOLEAN() { return getToken(DECAFParser.BOOLEAN, 0); }
		public StructDeclarationContext structDeclaration() {
			return getRuleContext(StructDeclarationContext.class,0);
		}
		public TerminalNode VOID() { return getToken(DECAFParser.VOID, 0); }
		public TerminalNode STRUCT() { return getToken(DECAFParser.STRUCT, 0); }
		public TerminalNode ID() { return getToken(DECAFParser.ID, 0); }
		public VarTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DECAFListener ) ((DECAFListener)listener).enterVarType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DECAFListener ) ((DECAFListener)listener).exitVarType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DECAFVisitor ) return ((DECAFVisitor<? extends T>)visitor).visitVarType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarTypeContext varType() throws RecognitionException {
		VarTypeContext _localctx = new VarTypeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_varType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(129);
				match(INT);
				}
				break;
			case 2:
				{
				setState(130);
				match(CHAR);
				}
				break;
			case 3:
				{
				setState(131);
				match(BOOLEAN);
				}
				break;
			case 4:
				{
				{
				setState(132);
				match(STRUCT);
				setState(133);
				match(ID);
				}
				}
				break;
			case 5:
				{
				setState(134);
				structDeclaration();
				}
				break;
			case 6:
				{
				setState(135);
				match(VOID);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodDeclarationContext extends ParserRuleContext {
		public MethodDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodDeclaration; }
	 
		public MethodDeclarationContext() { }
		public void copyFrom(MethodDeclarationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class MethodDeclarationProductionContext extends MethodDeclarationContext {
		public MethodTypeContext methodType() {
			return getRuleContext(MethodTypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(DECAFParser.ID, 0); }
		public TerminalNode LPARENT() { return getToken(DECAFParser.LPARENT, 0); }
		public TerminalNode RPARENT() { return getToken(DECAFParser.RPARENT, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public List<ParameterContext> parameter() {
			return getRuleContexts(ParameterContext.class);
		}
		public ParameterContext parameter(int i) {
			return getRuleContext(ParameterContext.class,i);
		}
		public List<TerminalNode> COMA() { return getTokens(DECAFParser.COMA); }
		public TerminalNode COMA(int i) {
			return getToken(DECAFParser.COMA, i);
		}
		public MethodDeclarationProductionContext(MethodDeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DECAFListener ) ((DECAFListener)listener).enterMethodDeclarationProduction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DECAFListener ) ((DECAFListener)listener).exitMethodDeclarationProduction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DECAFVisitor ) return ((DECAFVisitor<? extends T>)visitor).visitMethodDeclarationProduction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MethodDeclarationContext methodDeclaration() throws RecognitionException {
		MethodDeclarationContext _localctx = new MethodDeclarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_methodDeclaration);
		int _la;
		try {
			_localctx = new MethodDeclarationProductionContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			methodType();
			setState(139);
			match(ID);
			setState(140);
			match(LPARENT);
			setState(149);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << CHAR) | (1L << BOOLEAN))) != 0)) {
				{
				setState(141);
				parameter();
				setState(146);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMA) {
					{
					{
					setState(142);
					match(COMA);
					setState(143);
					parameter();
					}
					}
					setState(148);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(151);
			match(RPARENT);
			setState(152);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodTypeContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(DECAFParser.INT, 0); }
		public TerminalNode CHAR() { return getToken(DECAFParser.CHAR, 0); }
		public TerminalNode BOOLEAN() { return getToken(DECAFParser.BOOLEAN, 0); }
		public TerminalNode VOID() { return getToken(DECAFParser.VOID, 0); }
		public MethodTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DECAFListener ) ((DECAFListener)listener).enterMethodType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DECAFListener ) ((DECAFListener)listener).exitMethodType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DECAFVisitor ) return ((DECAFVisitor<? extends T>)visitor).visitMethodType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MethodTypeContext methodType() throws RecognitionException {
		MethodTypeContext _localctx = new MethodTypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_methodType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << CHAR) | (1L << BOOLEAN) | (1L << VOID))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParameterContext extends ParserRuleContext {
		public ParameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameter; }
	 
		public ParameterContext() { }
		public void copyFrom(ParameterContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ParameterArrayDeclarationContext extends ParameterContext {
		public ParameterTypeContext parameterType() {
			return getRuleContext(ParameterTypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(DECAFParser.ID, 0); }
		public TerminalNode LCORCH() { return getToken(DECAFParser.LCORCH, 0); }
		public TerminalNode RCORCH() { return getToken(DECAFParser.RCORCH, 0); }
		public ParameterArrayDeclarationContext(ParameterContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DECAFListener ) ((DECAFListener)listener).enterParameterArrayDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DECAFListener ) ((DECAFListener)listener).exitParameterArrayDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DECAFVisitor ) return ((DECAFVisitor<? extends T>)visitor).visitParameterArrayDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ParameterRegularDeclarationContext extends ParameterContext {
		public ParameterTypeContext parameterType() {
			return getRuleContext(ParameterTypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(DECAFParser.ID, 0); }
		public ParameterRegularDeclarationContext(ParameterContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DECAFListener ) ((DECAFListener)listener).enterParameterRegularDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DECAFListener ) ((DECAFListener)listener).exitParameterRegularDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DECAFVisitor ) return ((DECAFVisitor<? extends T>)visitor).visitParameterRegularDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParameterContext parameter() throws RecognitionException {
		ParameterContext _localctx = new ParameterContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_parameter);
		try {
			setState(164);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				_localctx = new ParameterRegularDeclarationContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(156);
				parameterType();
				setState(157);
				match(ID);
				}
				break;
			case 2:
				_localctx = new ParameterArrayDeclarationContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(159);
				parameterType();
				setState(160);
				match(ID);
				setState(161);
				match(LCORCH);
				setState(162);
				match(RCORCH);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParameterTypeContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(DECAFParser.INT, 0); }
